--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,11 +14,11 @@
             <%= link_to "My Posts", my_posts_path, class: "nav-link" %>
           </li>
           <li class="nav-item <%= "active" if request.path == my_friends_path %>">
-            <%= link_to "My friends", my_friends_path, class: "nav-link" %>
+            <%= link_to "My Friends", my_friends_path, class: "nav-link" %>
           </li>
           <li class="nav-item <%= "active" if request.path == edit_user_registration_path %>">
             <%= link_to edit_user_registration_path, class: "nav-link" do %>
-            <%= fa_icon "edit" %> Edit profile
+            <%= fa_icon "edit" %> Edit Profile
             <% end %>
           </li>
 
