--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,49 @@
-<h1 class="text-center">Newsfeed</h1>
-<% @posts.each do |post| %>
-<div class="card text-center">
-  <div class="card-header">
-    Featured
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-  <div class="card-footer text-muted">
-    2 days ago
+<h1 class="text-center">Newsfeed  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+ <i class="bi bi-plus-lg"></i> New Post
+</button>  </h1>
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create New Post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      <%= render "posts/form", post: @post %>      
+    </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
-    <% end %>
-<br>
 
+
+<div class="container">
+<% @posts.each do |post| %>
+<div class="card text-center  mt-5">
+  <div class="card-header">
+    @<%= post.user.full_name %>
+  </div>
+  <div class="card-body">
+    <p class="card-text"><%= post.body %></p>
+  </div>
+  <div class="card-footer text-muted">
+      Likes: 01 - Comments: 09
+  </div>
+  <div class="card-footer text-muted">
+      <%= TimeDifference.between(post.created_at, Time.new).humanize %>  ago </div>
+  <div class="card-footer text-muted">
+          <a href="#" class="btn btn-outline-success"><i class="bi bi-star"></i> Like</a>
+          <a href="#" class="btn btn-outline-info"><i class="bi bi-pencil"></i> Comment</a>
+           <%= link_to " View Post", post_path(post), class: "btn pull-right btn btn-outline-dark bi bi-view-stacked" %>
+           </div>
+  </div>
+  <% end %>
+</div>
