--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,6 @@
 @import "bootstrap/dist/css/bootstrap";
 @import "bootstrap/dist/css/bootstrap";
 
-.navbar {
-  background-color: #cad5fc !important;
-}
-
 h1 {
   color: #002070;
 }
@@ -57,4 +53,5 @@ div.friend-actions {
 .user-name {
   margin-top: 3%;
   padding-right: 1rem;
+  color: white !important;
 }
