--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,20 @@
 <h2><%= @user.full_name %> profile</h2>
-
 <h4>Email address: <%= @user.email %></h4>
-
-<% if current_user.friends_with? @user.id %>
+<% if  current_user.id==@user.id  %>
+  <h4>
+    <span class="badge badge-info">
+      Your Profile
+    </span>
+  </h4>
+<% elsif current_user.friends_with? @user.id  %>
   <h4>
     <span class="badge badge-info">
       You are following <%= @user.first_name %>
+    </span>
+    <span class="badge badge-info">
+      User Joined  <%= @user.created_at %>
     </span>
   </h4>
 <% else %>
   <%= link_to 'Follow', friendships_path(user: @user), method: :post, class: 'btn btn-info' %>
 <% end %>
-
-
