--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -1,24 +1,18 @@
 <h1 class="text-center">Track Friendships</h1>
 <div class="search-area">
-  <h3>Search for friends</h3>
-  <%= form_tag search_user_path, remote: true, method: :get do %>
-    <div class="form-group row">
-      <div class="col-sm-9">
-        <%= text_field_tag :friend,
-            params[:friend],
-            placeholder: 'Name or email address',
-            autfocus: true,
-            class: 'form-control form-control-lg'
-        %>
-      </div>
-      <div class="col-sm-3">
-        <%= button_tag type: :submit, class: 'btn btn-success' do %>
-          <%= fa_icon 'search' %> Search
-        <% end %>
-      </div>
+  <h3>Search for friends using Email or First Name</h3>
+  <div class="form-group row">
+    <div class="col-sm-9">
+      <%= search_form_for( @q , url: my_friends_path ) do |f| %>
+        <%= f.search_field :first_name_or_email_cont  ,class: 'form-control form-control-lg' %>
+        <%= f.submit class:"btn btn-primary" %>
+      <%end%>
     </div>
-  <% end %>
+  </div>
 </div>
+<% if params[:q]%>
+  <%= render 'users/friends' %>
+<% end %>
 <div id="results"></div>
 <% if @friendships.empty? %>
   <h5 class="text-center text-primary mt-3">You don't currently have any friendships</h5>
