--- a/app/views/users/_friends.html.erb
+++ b/app/views/users/_friends.html.erb
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-sm-10">
     <%= render 'layouts/messages' %>
-
     <% if @users %>
       <% @users.each do |user| %>
         <div class="card friends-results-block bg-secondary text-white mb-3">
@@ -15,8 +14,10 @@
                   Already Friends
                 </span>
               <% else %>
-                <%= link_to 'Follow', friendships_path(user: user),
+                <% if current_user.id!=user.id %>
+                  <%= link_to 'Follow', friendships_path(user: user),
                             method: :post, class: 'btn btn-sm btn-info' %>
+                <% end %>
               <% end %>
             </div>
           </div>
