--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -1,10 +1,10 @@
 <h1 class="text-center">Track Friendships</h1>
 <div class="search-area">
-  <h3>Search for friends using Email or First Name</h3>
+  <h3>Search for friends</h3>
   <div class="form-group row">
     <div class="col-sm-9">
       <%= search_form_for( @q , url: my_friends_path ) do |f| %>
-        <%= f.search_field :first_name_or_email_cont  ,class: 'form-control form-control-lg' %>
+        <%= f.search_field :first_name_or_email_cont  ,class: 'form-control form-control-lg' , placeholder: 'Name or email address' %>
         <%= f.submit class:"btn btn-primary" %>
       <%end%>
     </div>
